--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
-_pycache_
+_pycache_\GitHub_practice_defModule.cpython-38.pyc
+_pycache_\GitHub_practice_defModuleTEST.cpython-38.pyc
+_pycache_\GitHub_practice_nestedCV_KfeatKoot.cpython-38.pyc
+_pycache_\SPLITTEST.cpython-38.pyc
 BU_GitHub_practice_CV.py
+BU2_GitHub_practice_CV.py
+BACKUP_GitHub_practice_CV.py
+GitHub_practive_defModuleTEST.py
+GitHub_practice_nesterCV_KfeatKoot.py
+SPLITTEST.py
+__pycache__/SPLITTEST.cpython-38.pyc
+__pycache__/GitHub_practice_defModule.cpython-38.pyc
+__pycache__/GitHub_practice_defModule.cpython-38.pyc
+__pycache__/GitHub_practice_defModule.cpython-38.pyc
